tests/ui/double_def_in_index_array.stderr
error[E0080]: evaluation panicked: index `0` was initialized twice
 --> tests/ui/double_def_in_index_array.rs:4:42
  |
4 |       const ARR: IndexArray<u32, i32, 3> = index_array! {
  |  __________________________________________^
5 | |         0 => 1,
6 | |         0 => 2,
7 | |         1 => 3,
8 | |     };
  | |_____^ evaluation of `main::ARR` failed here
  |
  = note: this error originates in the macro `index_array` (in Nightly builds, run with -Z macro-backtrace for more info)
